Multilanguage: Detail + common.smk.js

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -4,32 +4,47 @@
   },
   "language": {
     "en": {
-	  "tagCloud_artist": 		"Artist",
-	  "tagCloud_period": 		"Period",
-	  "tagCloud_country": 		"Country",
-	  "tagCloud_art_type": 		"Technique",
+	  "tagCloud_artist": 		"artist",
+	  "tagCloud_period": 		"period",
+	  "tagCloud_country": 		"country",
+	  "tagCloud_art_type": 		"technique",
       
-      "category_artwork" : 		"Artworks",
-	  "category_news" : 		"News",
-	  "category_calendar" : 	"Calendar",
-	  "category_article" : 		"Article",
-	  "category_info" : 		"Visiting info",
-	  "category_all" :	 		"All"
+      "category_artwork" : 		"artworks",
+	  "category_news" : 		"news",
+	  "category_calendar" : 	"calendar",
+	  "category_article" : 		"article",
+	  "category_info" : 		"visiting info",
+	  "category_all" :	 		"all",
+	  
+	  "detail_technique":		"technique",
+	  "detail_acquisition":		"acquisition",
+	  "detail_reference":		"reference",
+	  "detail_dimension":		"dimensions",	  
+	  "detail_dimension_net":	"net",
+	  "detail_dimension_brut":	"brut",
+	  "detail_location":		"location"
       
     },
     "dk": {
-      "tagCloud_artist": 		"Kunstner",
-      "tagCloud_period": 		"Periode",
-      "tagCloud_country": 		"Land",
-      "tagCloud_art_type": 		"Teknik",
+      "tagCloud_artist": 		"kunstner",
+      "tagCloud_period": 		"periode",
+      "tagCloud_country": 		"land",
+      "tagCloud_art_type": 		"teknik",
       
-      "category_artwork" : 		"V&aelig;rker",
-	  "category_news" : 		"Nyheder",
-	  "category_calendar" : 	"Kalender",
-	  "category_article" : 		"Artikler",
-	  "category_info" : 		"Praktisk info",
-	  "category_all" :	 		"Alle"      
+      "category_artwork" : 		"v&aelig;rker",
+	  "category_news" : 		"nyheder",
+	  "category_calendar" : 	"kalender",
+	  "category_article" : 		"artikler",
+	  "category_info" : 		"praktisk info",
+	  "category_all" :	 		"alle",
+	  
+	  "detail_technique":		"teknik",
+	  "detail_acquisition":		"erhvervelse",
+	  "detail_reference":		"inv.num.",
+	  "detail_dimension":		"dimension",
+	  "detail_dimension_net":	"netto",
+	  "detail_dimension_brut":	"brutto",
+	  "detail_location":		"location"      
     }
   }
 }
-
