--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -30,8 +30,185 @@
 	  
 	  "related_reference":		"reference",
 	  
-	  "search_box_default":		"Search artwork, title, artist, visiting info etc..."
-      
+	  "search_box_default":		"Search artwork, title, artist, visiting info etc...",
+	  "search_box_button":		"search",
+	  
+	  "search_filter_cent":		" c.",
+	  		
+		"amerikansk":			"United States",
+		"belgisk":				"Belgium",
+		"dansk":				"Danemark",
+		"engelsk":				"England",
+		"finsk":				"Finland",
+		"flamsk":				"Flanders",
+		"fransk":				"France",
+		"faeroesk":				"Faroe Islands",
+		"graesk":				"Greece",
+		"groenlandsk":			"Greenland",
+		"hollandsk":			"Holland",
+		"irsk":					"Ireland",
+		"islandsk":				"Iceland",
+		"italiensk":			"Italy",
+		"japansk":				"Japan",
+		"mexicansk":			"Mexico",
+		"nederlandsk":			"Netherlands",
+		"norsk":				"Norway",
+		"polsk":				"Poland",
+		"portugisisk":			"Portugal",
+		"russisk":				"Russia",
+		"schweizisk":			"Swiss",
+		"serbisk":				"Serbia",
+		"spansk":				"Spain",
+		"svensk":				"Sweden",
+		"tjekkisk":				"Czech Republic",
+		"tysk":					"Germany",
+		"ungarsk":				"Hungary",
+		"oestrigsk":			"Austria",
+		
+		
+		"akvarel":	"Watercolour",
+		"akvatinte":	"Aquatint",
+		"alter":	"Altar",
+		"altertavle":	"Alterpiece",
+		"altertavle":	"Alterpiece",
+		"arkitekturrelateret maleri":	"Painting by architecture context",
+		"arkitekturrelateret":	"Architecture related",
+		"askekiste":	"Ash-chest",
+		"assemblage":	"Assemblage (sculpture)",
+		"audio":	"Audio",
+		"autografi":	"Transfer lithography",
+		"baldakin":	"Canopy",
+		"billedtaeppe":	"Tapestry",
+		"blyant":	"Pencil",
+		"bogbind":	"Book cover",
+		"boghaandvaerk":	"Books",
+		"buste":	"Bust",
+		"cassone":	"Cassone",
+		"ciborium":	"Ciborium",
+		"clairobscurtraesnit":	"Chiaroscuro woodcut",
+		"collage":	"Collage",
+		"collage-maleri":	"Collage painting",
+		"computer":	"Computer",
+		"computerprint":	"Computer print",		
+		"crayonstik":	"Crayon manner",
+		"decollage":	"D&eacute;collage",
+		"diptychon":	"Diptych",
+		"diskos":	"Discus",
+		"doebefont":	"Font (babtismal)",		
+		"doerstykke":	"Overdoor",
+		"dybtryk":	"Intaglio printing",
+		"film":	"film",
+		"film/video/lyd/computer":	"Film/video/sound/computer",
+		"fotografi":	"Photograph",
+		"fotogravure":	"Photogravure",		
+		"fotoserigrafi":	"Photo serigraphy",
+		"frise":	"Frieze",
+		"friskulptur":	"Sculpture in the round",
+		"gouache":	"Gouache",
+		"grafik":	"Print",
+		"gravmaele":	"Sepulchral monument",
+		"halvfigur":	"Half figure",
+		"heliogravure":	"Heliogravure",
+		"herme":	"Herm",
+		"hoejtryk":	"Relief printing",
+		"hoved":	"Head (representation)",
+		"ikon":	"Icon",
+		"installation":	"Installation (sculpture)",
+		"kame":	"Cameo",
+		"kapitael":	"Capital",
+		"keramik":	"Ceramics",
+		"kinetisk vaerk":	"Kinetic",
+		"klichetryk":	"Block printing",
+		"kobberstik":	"Engraving",
+		"koldnaal":	"Etching",
+		"konsol":	"Consol",
+		"kore":	"Kore",
+		"kouros":	"Kouros",
+		"kridt":	"Chalk",
+		"krucifiks":	"Crucifix",
+		"kul":	"Charcoal",
+		"kunsthaandvaerk":	"Decorative arts",
+		"linoleumssnit":	"Linocut",
+		"litografi":	"Lithography",
+		"loftsmaleri":	"Ceiling painting",
+		"lyd":	"Sound",
+		"lystryk":	"Collotype",
+		"maleri":	"Painting",
+		"maske":	"Mask",
+		"medalje":	"Medal",
+		"medaljon":	"Medallion (medal)",
+		"metalsnit":	"Metalcut",
+		"mezzotint":	"Mezzotint",
+		"miniature":	"Miniatures",
+		"mobile":	"Mobile",
+		"moent":	"Coin",
+		"monotypi":	"Monotype",
+		"monument":	"Monument",
+		"mou":		"Mou",
+		"obelisk":	"Obelisk",
+		"objekt":	"Object",
+		"objet trouve":	"Objet trouv&eacute;",
+		"offset":	"Offset lithography",
+		"oliekridt":	"Crayon",
+		"olietryk":	"Oleograph",
+		"omtrykslitografi":	"Omtrykslitografi",
+		"pastel":	"Pastel",
+		"pastelkridt":	"Pastel crayon",
+		"pen":	"Pen",
+		"pensel":	"Brush",
+		"plakette":	"Plaquette",
+		"plantryk":	"Planographic printing",
+		"podium":	"Podium",
+		"predella":	"Predella",
+		"radering":	"Etching",
+		"relief":	"Relief",
+		"reliefsnit":	"Relief etching",
+		"rytterstatue":	"Equestrian statue",
+		"rytterstatuette":	"Equestrian statuette",
+		"segl":	"Seal",
+		"serigrafi":	"Serigraphy",
+		"sfinks":	"Sphinx",
+		"signet":	"Signet",
+		"skabelontryk":	"Stencil print",
+		"skulptur":	"Sculpture",
+		"soejle":	"Column",
+		"soejlebase":	"Base of a column",
+		"soelvstift":	"Silverpoint",
+		"sokkel":	"Pedestal",
+		"spejlkapsel":	"Mirror case",
+		"spygat":	"Spout",
+		"statue":	"Statue",
+		"statuegruppe":	"Group of statues",
+		"statuette":	"Figurines/statuette",
+		"statuettegruppe":	"Figurine/statuette",
+		"stele":	"Stele/stelae",
+		"stregaetsning":	"Line etching",
+		"stregkliche":	"Line block",
+		"staalstik":	"Steel engraving",
+		"tavle":	"Table",
+		"tegning":	"Drawing",
+		"tekstil":	"Textiles",
+		"torso":	"Torso",
+		"toernaal":	"Drypoint",
+		"traesnit":	"Woodcut",
+		"tympanon":	"Tympanum",
+		"vaeginstallation":	"Wall piece",
+		"vaegmaleri":	"Mural painting",
+		"vase":	"Vase",
+		"vernis":	"Vernis",
+		"vernis mou":	"Vernis mou",
+		"video":	"Video",
+		"visuel":	"Visuel",
+		"vievandskar":	"Holy-water font",
+		"xylografi":	"Xylography",
+		"zinkografi":	"Zincography",
+		"zinktryk":	"Zinc engraving"
+				
+
+		
+				
+		
+
     },
     "dk": {
       "tagCloud_artist": 		"kunstner",
@@ -60,7 +237,184 @@
 	  
 	  "related_reference":		"inv.num",
 	  	  
-	  "search_box_default":		"S&oslash;g efter kunstv&aelig;rker, title, kunstner, praktisk info etc.."
+	  "search_box_default":		"S&oslash;g efter kunstv&aelig;rker, title, kunstner, praktisk info etc..",
+	  "search_box_button":		"s&oslash;g",
+	  
+	  "search_filter_cent":		"&aring;rh.",
+	  
+	  "amerikansk":				"amerikansk",
+		"belgisk":				"belgisk",
+		"dansk":				"dansk",
+		"engelsk":				"engelsk",
+		"finsk":				"finsk",
+		"flamsk":				"flamsk",
+		"fransk":				"fransk",
+		"faeroesk":				"f&aelig;r&oslash;sk",
+		"graesk":				"gr&aelig;sk",
+		"groenlandsk":			"gr&oslash;nlandsk",
+		"hollandsk":			"hollandsk",
+		"irsk":					"irsk",
+		"islandsk":				"islandsk",
+		"italiensk":			"italiensk",
+		"japansk":				"japansk",
+		"mexicansk":			"mexicansk",
+		"nederlandsk":			"nederlandsk",
+		"norsk":				"norsk",
+		"polsk":				"polsk",
+		"portugisisk":			"portugisisk",
+		"russisk":				"russisk",
+		"schweizisk":			"schweizisk",
+		"serbisk":				"serbisk",
+		"spansk":				"spansk",
+		"svensk":				"svensk",
+		"tjekkisk":				"tjekkisk",
+		"tysk":					"tysk",
+		"ungarsk":				"ungarsk",
+		"oestrigsk":			"&Oslash;strigsk",
+		
+		
+		"akvarel":	"akvarel",
+		"akvatinte":	"akvatinte",
+		"alter":	"alter",
+		"altertavle":	"altertavle",
+		"altertavle":	"altertavle",
+		"arkitekturrelateret maleri":	"arkitekturrelateret maleri",
+		"arkitekturrelateret":	"arkitekturrelateret",
+		"askekiste":	"askekiste",
+		"assemblage":	"assemblage",
+		"audio":	"audio",
+		"autografi":	"autografi",
+		"baldakin":	"baldakin",
+		"billedtaeppe":	"billedt&aelig;ppe",
+		"blyant":	"blyant",
+		"bogbind":	"bogbind",
+		"boghaandvaerk":	"bogh&aring;ndv&aelig;rk",
+		"buste":	"buste",
+		"cassone":	"cassone",
+		"ciborium":	"ciborium",
+		"clairobscurtraesnit":	"clairobscurtr&aelig;snit",
+		"collage":	"collage",
+		"collage-maleri":	"collage-maleri",
+		"computer":	"computer",
+		"computerprint":	"computerprint",
+		"crayonstik":	"crayonstik",
+		"decollage":	"d&eacute;collage",
+		"diptychon":	"diptychon",
+		"diskos":	"diskos",
+		"dybtryk":	"dybtryk",
+		"doebefont":	"d&oslash;befont",
+		"doerstykke":	"d&oslash;rstykke",
+		"film":	"film",
+		"film/video/lyd/computer":	"film/video/lyd/computer",
+		"fotografi":	"fotografi",
+		"fotogravure":	"fotogravure",
+		"fotoserigrafi":	"fotoserigrafi",
+		"frise":	"frise",
+		"friskulptur":	"friskulptur",
+		"gouache":	"gouache",
+		"grafik":	"grafik",
+		"gravmaele":	"gravm&aelig;le",
+		"halvfigur":	"halvfigur",
+		"heliogravure":	"heliogravure",
+		"herme":	"herme",
+		"hoved":	"hoved",
+		"hoejtryk":	"h&oslash;jtryk",
+		"ikon":	"ikon",
+		"installation":	"installation",
+		"kame":	"kam&eacute;",
+		"kapitael":	"kapit&aelig;l",
+		"keramik":	"keramik",
+		"kinetisk vaerk":	"kinetisk v&aelig;rk",
+		"klichetryk":	"klich&eacute;tryk",
+		"kobberstik":	"kobberstik",
+		"koldnaal":	"koldn&aring;l",
+		"konsol":	"konsol",
+		"kore":	"kore",
+		"kouros":	"kouros",
+		"kridt":	"kridt",
+		"krucifiks":	"krucifiks",
+		"kul":	"kul",
+		"kunsthaandvaerk":	"kunsth&aring;ndv&aelig;rk",
+		"linoleumssnit":	"linoleumssnit",
+		"litografi":	"litografi",
+		"loftsmaleri":	"loftsmaleri",
+		"lyd":	"lyd",
+		"lystryk":	"lystryk",
+		"maleri":	"maleri",
+		"maske":	"maske",
+		"medalje":	"medalje",
+		"medaljon":	"medaljon",
+		"metalsnit":	"metalsnit",
+		"mezzotint":	"mezzotint",
+		"miniature":	"miniature",
+		"mobile":	"mobile",
+		"monotypi":	"monotypi",
+		"monument":	"monument",
+		"mou":		"mou",
+		"moent":	"m&oslash;nt",
+		"obelisk":	"obelisk",
+		"objekt":	"objekt",
+		"objet trouve":	"objet trouv&eacute;",
+		"offset":	"offset",
+		"oliekridt":	"oliekridt",
+		"olietryk":	"olietryk",
+		"omtrykslitografi":	"omtrykslitografi",
+		"pastel":	"pastel",
+		"pastelkridt":	"pastelkridt",
+		"pen":	"pen",
+		"pensel":	"pensel",
+		"plakette":	"plakette",
+		"plantryk":	"plantryk",
+		"podium":	"podium",
+		"predella":	"predella",
+		"radering":	"radering",
+		"relief":	"relief",
+		"reliefsnit":	"reliefsnit",
+		"rytterstatue":	"rytterstatue",
+		"rytterstatuette":	"rytterstatuette",
+		"segl":	"segl",
+		"serigrafi":	"serigrafi",
+		"sfinks":	"sfinks",
+		"signet":	"signet",
+		"skabelontryk":	"skabelontryk",
+		"skulptur":	"skulptur",
+		"sokkel":	"sokkel",
+		"spejlkapsel":	"spejlkapsel",
+		"spygat":	"spygat",
+		"statue":	"statue",
+		"statuegruppe":	"statuegruppe",
+		"statuette":	"statuette",
+		"statuettegruppe":	"statuettegruppe",
+		"stele":	"stele",
+		"stregkliche":	"stregklich&eacute;",
+		"stregaetsning":	"streg&aelig;tsning",
+		"staalstik":	"st&aring;lstik",
+		"soejle":	"s&oslash;jle",
+		"soejlebase":	"s&oslash;jlebase",
+		"soelvstift":	"s&oslash;lvstift",
+		"tavle":	"tavle",
+		"tegning":	"tegning",
+		"tekstil":	"tekstil",
+		"torso":	"torso",
+		"toernaal":	"t&aring;rn&aring;l",
+		"traesnit":	"tr&aelig;snit",
+		"tympanon":	"tympanon",
+		"vase":	"vase",
+		"vernis":	"vernis",
+		"vernis mou":	"vernis mou",
+		"video":	"video",
+		"vievandskar":	"vievandskar",
+		"visuel":	"visuel",
+		"vaeginstallation":	"v&aelig;ginstallation",
+		"vaegmaleri":	"v&aelig;gmaleri",
+		"xylografi":	"xylografi",
+		"zinkografi":	"zinkografi",
+		"zinktryk":	"zinktryk"
+				
+		
+		
+		
+		
 	        
     }
   }
