--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -40,6 +40,10 @@
 	  "sorter_dato_desc":		"date (most recent first)",
 	  "sorter_dato_asc":		"date (older first)",
 	  
+	  "teaser_reference":		"reference",
+	  "teaser_appoint":			"view by appointement",
+	  "teaser_on_display": 		"on display",
+	  
 	  		
 		"amerikansk":			"United States",
 		"belgisk":				"Belgium",
@@ -209,12 +213,6 @@
 		"xylografi":	"Xylography",
 		"zinkografi":	"Zincography",
 		"zinktryk":	"Zinc engraving"
-				
-
-		
-				
-		
-
     },
     "dk": {
       "tagCloud_artist": 		"kunstner",
@@ -252,6 +250,11 @@
 	  "sorter_relevans":		"relevans",
 	  "sorter_dato_desc":		"dato (nyest f&oslash;rst)",
 	  "sorter_dato_asc":		"dato (&aelig;ldst f&oslash;rst)",
+	  
+	  "teaser_reference":		"inv.num.",
+	  "teaser_appoint":			"kan ses efter aftale",
+	  "teaser_on_display": 		"kan ses p&aring; museet",
+	  
 	  
 	  
 	  "amerikansk":				"amerikansk",
@@ -421,13 +424,169 @@
 		"vaegmaleri":	"v&aelig;gmaleri",
 		"xylografi":	"xylografi",
 		"zinkografi":	"zinkografi",
-		"zinktryk":	"zinktryk"
+		"zinktryk":	"zinktryk"     
+    }
+  },
+  
+  "collections": {
+    "en": {
+		"Sal 100":	"collections",
+		"Sal 111":	"collections",
+		"Sal 114":	"collections",
+		"Sal 116":	"collections",
+		"Sal 120":	"collections",
+		"Sal 200":	"collections",
+		"Sal 201A":	"collections",
+		"Sal 201B":	"collections",
+		"Sal 201C":	"collections",
+		"Sal 201D":	"collections",
+		"Sal 201E":	"collections",
+		"Sal 202 før 2006":	"collections",
+		"Sal 202":	"collections",
+		"Sal 203":	"collections",
+		"Sal 204":	"collections",
+		"Sal 205":	"collections",
+		"Sal 206":	"collections",
+		"Sal 207":	"collections",
+		"Sal 208A":	"collections",
+		"Sal 208B":	"collections",
+		"Sal 209 ":	"collections",
+		"Sal 210A":	"collections",
+		"Sal 210B":	"collections",
+		"Sal 211A":	"collections",
+		"Sal 211B":	"collections",
+		"Sal 212":	"collections",
+		"Sal 213":	"collections",
+		"Sal 214":	"collections",
+		"Sal 215":	"collections",
+		"Sal 216":	"collections",
+		"Sal 217A":	"collections",
+		"Sal 217B":	"collections",
+		"Sal 217C":	"collections",
+		"Sal 217D":	"collections",
+		"Sal 217E":	"collections",
+		"Sal 217F":	"collections",
+		"Sal 218A":	"collections",
+		"Sal 218B":	"collections",
+		"Sal 219":	"collections",
+		"Sal 220":	"collections",
+		"Sal 221":	"collections",
+		"Sal 222":	"collections",
+		"Sal 223":	"collections",
+		"Sal 224":	"collections",
+		"Sal 225":	"collections",
+		"Sal 226":	"collections",
+		"Sal 227":	"collections",
+		"Sal 228":	"collections",
+		"Sal 229":	"collections",
+		"Sal 260":	"collections",
+		"Sal 261":	"collections",
+		"Sal 262":	"collections",
+		"Sal 263A":	"collections",
+		"Sal 263B":	"collections",
+		"Sal 263C":	"collections",
+		"Sal 264":	"collections",
+		"Sal 264A 2006 - 2011":	"collections",
+		"Sal 265":	"collections",
+		"Sal 266":	"collections",
+		"Sal 268A":	"collections",
+		"Sal 268B":	"collections",
+		"Sal 269A":	"collections",
+		"Sal 269B":	"collections",
+		"Sal 270A":	"collections",
+		"Sal 270B":	"collections",
+		"Sal 272":	"collections",
+		"Sal 300A":	"collections",
+		"Sal 300B":	"collections",
+		"Sal 301A":	"collections",
+		"Sal 301B":	"collections",
+		"Sal 301C":	"collections",
+		"Sal 301D":	"collections",
+		"Sal 302A":	"collections",
+		"Sal 302B":	"collections",
+		"Sal 302C":	"collections",
+		"default":	"collections"
 				
+
+    },
+    "dk": {
 		
-		
-		
-		
-	        
+		"Sal 100":	"samlinger",
+		"Sal 111":	"samlinger",
+		"Sal 114":	"samlinger",
+		"Sal 116":	"samlinger",
+		"Sal 120":	"samlinger",
+		"Sal 200":	"samlinger",
+		"Sal 201A":	"samlinger",
+		"Sal 201B":	"samlinger",
+		"Sal 201C":	"samlinger",
+		"Sal 201D":	"samlinger",
+		"Sal 201E":	"samlinger",
+		"Sal 202 før 2006":	"samlinger",
+		"Sal 202":	"samlinger",
+		"Sal 203":	"samlinger",
+		"Sal 204":	"samlinger",
+		"Sal 205":	"samlinger",
+		"Sal 206":	"samlinger",
+		"Sal 207":	"samlinger",
+		"Sal 208A":	"samlinger",
+		"Sal 208B":	"samlinger",
+		"Sal 209 ":	"samlinger",
+		"Sal 210A":	"samlinger",
+		"Sal 210B":	"samlinger",
+		"Sal 211A":	"samlinger",
+		"Sal 211B":	"samlinger",
+		"Sal 212":	"samlinger",
+		"Sal 213":	"samlinger",
+		"Sal 214":	"samlinger",
+		"Sal 215":	"samlinger",
+		"Sal 216":	"samlinger",
+		"Sal 217A":	"samlinger",
+		"Sal 217B":	"samlinger",
+		"Sal 217C":	"samlinger",
+		"Sal 217D":	"samlinger",
+		"Sal 217E":	"samlinger",
+		"Sal 217F":	"samlinger",
+		"Sal 218A":	"samlinger",
+		"Sal 218B":	"samlinger",
+		"Sal 219":	"samlinger",
+		"Sal 220":	"samlinger",
+		"Sal 221":	"samlinger",
+		"Sal 222":	"samlinger",
+		"Sal 223":	"samlinger",
+		"Sal 224":	"samlinger",
+		"Sal 225":	"samlinger",
+		"Sal 226":	"samlinger",
+		"Sal 227":	"samlinger",
+		"Sal 228":	"samlinger",
+		"Sal 229":	"samlinger",
+		"Sal 260":	"samlinger",
+		"Sal 261":	"samlinger",
+		"Sal 262":	"samlinger",
+		"Sal 263A":	"samlinger",
+		"Sal 263B":	"samlinger",
+		"Sal 263C":	"samlinger",
+		"Sal 264":	"samlinger",
+		"Sal 264A 2006 - 2011":	"samlinger",
+		"Sal 265":	"samlinger",
+		"Sal 266":	"samlinger",
+		"Sal 268A":	"samlinger",
+		"Sal 268B":	"samlinger",
+		"Sal 269A":	"samlinger",
+		"Sal 269B":	"samlinger",
+		"Sal 270A":	"samlinger",
+		"Sal 270B":	"samlinger",
+		"Sal 272":	"samlinger",
+		"Sal 300A":	"samlinger",
+		"Sal 300B":	"samlinger",
+		"Sal 301A":	"samlinger",
+		"Sal 301B":	"samlinger",
+		"Sal 301C":	"samlinger",
+		"Sal 301D":	"samlinger",
+		"Sal 302A":	"samlinger",
+		"Sal 302B":	"samlinger",
+		"Sal 302C":	"samlinger",		
+		"default":	"samlinger"					        
     }
   }
 }
