Searchfilters - centuries: -tallet på dansk

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -247,7 +247,7 @@
 	  "search_box_default":		"S&oslash;g efter kunstv&aelig;rker, title, kunstner, praktisk info etc..",
 	  "search_box_button":		"s&oslash;g",
 	  
-	  "search_filter_cent":		"&aring;rh.",
+	  "search_filter_cent":		"tallet",
 	  
 	  "sorter_sort":			"sort&eacute;r:",
 	  "sorter_relevans":		"relevans",
