Search Filters : Nationality instead of country

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -6,7 +6,7 @@
     "en": {
 	  "tagCloud_artist": 		"artist",
 	  "tagCloud_period": 		"period",
-	  "tagCloud_country": 		"country",
+	  "tagCloud_country": 		"nationality",
 	  "tagCloud_art_type": 		"technique",
       
       "category_artwork" : 		"artworks",
@@ -51,35 +51,35 @@
 	  
 	  "thumbs_label":	 		"associated works",
 	  		
-		"amerikansk":			"United States",
-		"belgisk":				"Belgium",
-		"dansk":				"Danemark",
-		"engelsk":				"England",
-		"finsk":				"Finland",
-		"flamsk":				"Flanders",
-		"fransk":				"France",
-		"faeroesk":				"Faroe Islands",
-		"graesk":				"Greece",
+		"amerikansk":			"American",
+		"belgisk":				"Belgian",
+		"dansk":				"Danish",
+		"engelsk":				"English",
+		"finsk":				"Finnish",
+		"flamsk":				"Flemish",
+		"fransk":				"French",
+		"faeroesk":				"Faroese",
+		"graesk":				"Greek",
 		"groenlandsk":			"Greenland",
-		"hollandsk":			"Holland",
-		"irsk":					"Ireland",
-		"islandsk":				"Iceland",
-		"italiensk":			"Italy",
-		"japansk":				"Japan",
-		"mexicansk":			"Mexico",
+		"hollandsk":			"Dutch",
+		"irsk":					"Irish",
+		"islandsk":				"Icelandic",
+		"italiensk":			"Italian",
+		"japansk":				"Japanese",
+		"mexicansk":			"Mexican",
 		"nederlandsk":			"Netherlands",
-		"norsk":				"Norway",
-		"polsk":				"Poland",
-		"portugisisk":			"Portugal",
-		"russisk":				"Russia",
+		"norsk":				"Norwegian",
+		"polsk":				"Polish",
+		"portugisisk":			"Portuguese",
+		"russisk":				"Russian",
 		"schweizisk":			"Swiss",
-		"serbisk":				"Serbia",
-		"spansk":				"Spain",
-		"svensk":				"Sweden",
-		"tjekkisk":				"Czech Republic",
-		"tysk":					"Germany",
-		"ungarsk":				"Hungary",
-		"oestrigsk":			"Austria",
+		"serbisk":				"Serbian",
+		"spansk":				"Spanish",
+		"svensk":				"Swedish",
+		"tjekkisk":				"Czech",
+		"tysk":					"German",
+		"ungarsk":				"Hungarian",
+		"oestrigsk":			"Austrian",
 		
 		
 		"akvarel":	"Watercolour",
@@ -223,7 +223,7 @@
     "dk": {
       "tagCloud_artist": 		"kunstner",
       "tagCloud_period": 		"periode",
-      "tagCloud_country": 		"land",
+      "tagCloud_country": 		"nationalitet",
       "tagCloud_art_type": 		"teknik",
       
       "category_artwork" : 		"v&aelig;rker",
